# Async-Inference-Gemini

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml
jupyter/: run_inference.ipynb
misc/output/: results.json
misc/prompts/: prompt.yaml
misc/schemas/: schema.json
src/: main.py  utils.py
